--- a/styles/components/_navbar.scss
+++ b/styles/components/_navbar.scss
@@ -22,6 +22,7 @@
 
   //this houses the small logo, hamburger and in-line links visible on tablet and above
   .nav-top-bar {
+    position: relative;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -40,7 +41,7 @@
     display: none;
     background-color: white;
     padding: 20px;
-    padding-top: 15px;
+    padding-top: 25px;
     text-align: center;
     text-transform: uppercase;
     box-shadow: 5px 0px 2px grey;
@@ -48,7 +49,8 @@
 
     li a {
       color: black;
-      line-height: 1.75em;
+      line-height: 2em;
+      font-size: 1.25em;
       font-weight: 400;
       font-style: italic;
       border-bottom: 1px solid $light-grey;
