--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -4,6 +4,7 @@
   "global/vars",
   "global/mixins",
   "global/base",
+  "global/helpers",
   //components
   "components/materialize-form-colors",
   "components/navbar",
