--- a/styles/components/_case-studies.scss
+++ b/styles/components/_case-studies.scss
@@ -19,6 +19,7 @@
     }
     .case-study-left {
       padding: 40px;
+      padding-top: 0;
     };
   }
 }
@@ -59,9 +60,11 @@
     @include tablet {
       display: flex;
       justify-content: space-between;
+      .case-study-bullets-left, .case-study-bullets-right {
+        width: 50%;
+      }
       .case-study-bullets-left {
-        margin-right: 20px;
-        flex-basis: 50%;
+        margin-right: 30px;
       }
     };
   }
@@ -78,6 +81,8 @@
 
   .case-study-content {
     width: 100%;
+    padding: 20px;
+    // border: 1px solid blue;
 
     @include desktop {
       margin-left: 18px;
@@ -87,8 +92,8 @@
     };
     .screenshot {
       width: 100%;
-      margin: 0;
-      margin-top: -5px;
+      display: block;
+      margin: 10px auto;
     }
   }
 }
