clean up npo thumbnails a bit more

--- a/styles/global/_helpers.scss
+++ b/styles/global/_helpers.scss
@@ -1,7 +1,14 @@
 .display-on-mobile {
-  @include desktop {
+  @include tablet {
     display: none;
   }
+}
+
+.display-on-tablet {
+  display: none;
+  @include tablet {
+    display: block;
+  };
 }
 
 .display-on-desktop {
