--- a/styles/styles.css
+++ b/styles/styles.css
@@ -445,9 +445,15 @@ section {
   border-top: 1px solid #C7C7C7;
   margin: 20px auto; }
 
-@media (min-width: 1024px) {
+@media (min-width: 768px) {
   .display-on-mobile {
     display: none; } }
+
+.display-on-tablet {
+  display: none; }
+  @media (min-width: 768px) {
+    .display-on-tablet {
+      display: block; } }
 
 .display-on-desktop {
   display: none; }
