add mobile images to style 360 case study

--- a/styles/components/_carousel.scss
+++ b/styles/components/_carousel.scss
@@ -36,7 +36,7 @@
 }
 
 #npo {
-  background-image: url('../images/npodonator.PNG');
+  background-image: url('../images/npo-donator.png');
 }
 
 .thumbnail {
