--- a/styles/styles.css
+++ b/styles/styles.css
@@ -589,7 +589,7 @@ section {
   background-image: url("../images/sandwich.png"); }
 
 #npo {
-  background-image: url("../images/npodonator.PNG"); }
+  background-image: url("../images/npo-donator.png"); }
 
 .thumbnail {
   height: 30vh;
@@ -718,7 +718,7 @@ section {
     .case-study-content-wrapper .case-study-content .screenshot {
       width: 100%;
       display: block;
-      margin: 10px auto; }
+      margin: 0; }
 
 .to-top-desktop, .to-top-tablet-and-down {
   text-align: center;
