fancy up animations

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -6,6 +6,7 @@
   "global/base",
   "global/helpers",
   //components
+  "components/header",
   "components/materialize-form-colors",
   "components/navbar",
   "components/about",
