--- a/styles/components/_scroll-thingy.scss
+++ b/styles/components/_scroll-thingy.scss
@@ -9,12 +9,11 @@
     width: 50px;
     border: 3px solid white;
     border-radius: 25px;
-    opacity: 0.5;
+    opacity: 0.6;
     .scroller {
       position: absolute;
       top: 30%;
       left: 45%;
-      // transform: translate(-50%, -50%);
       width: 3px;
       border: 3px solid white;
       animation-name: scroll;
@@ -25,6 +24,7 @@
   }
 };
 
+//scrolling dot
 @keyframes scroll {
   0% { opacity: 0; }
   10% { transform: translateY(0); opacity: 1; }
