hopefully fix img links

--- a/styles/components/_footer.scss
+++ b/styles/components/_footer.scss
@@ -10,7 +10,7 @@ footer {
     color: black;
     opacity: .5;
     transition: all .1s ease-in;
-    @include touch {
+    @include hover {
       &:hover {
         opacity: 1;
       }
