--- a/styles/components/_carousel.scss
+++ b/styles/components/_carousel.scss
@@ -4,7 +4,7 @@
 }
 
 #mobile-gallery {
-  @include touch {
+  @include hover {
     display: none;
   };
 }
@@ -12,7 +12,7 @@
 //show non-touch screen friendly carousel on non-touch screen devices
 #no-touch-carousel {
   display: none;
-  @include touch {
+  @include hover {
     display: block;
   };
 }
@@ -76,7 +76,7 @@
       opacity: 0;
       transition: .2s;
       z-index: 2;
-      @include touch {
+      @include hover {
         opacity: 0.5;
         &:hover {
           opacity: 1;
@@ -91,7 +91,7 @@
   }
 
   //when you hover on a carousel slide...
-  @include touch {
+  @include hover {
     &:hover {
       //make the overlay not-clear
       .overlay {
@@ -113,7 +113,7 @@
     color: black;
     cursor: pointer;
     transition: .2s ease-in;
-    @include touch {
+    @include hover {
       opacity: 0.5;
       &:hover {
         opacity: 1;
