--- a/styles/components/_case-studies.scss
+++ b/styles/components/_case-studies.scss
@@ -1,10 +1,20 @@
 .case-studies {
+  a {
+    text-decoration: underline;
+    color: black;
+    @include hover {
+      text-decoration: none;
+      opacity: 0.5;
+      transition: opacity .25s;
+      &:hover {
+        opacity: 1;
+      }
+    };
+  }
+
   .back-chevron {
     margin: 0 0 0 20px;
     text-transform: uppercase;
-    a {
-      color: black;
-    }
   }
   .case-study {
     display: flex;
@@ -112,7 +122,7 @@
     text-transform: uppercase;
     font-weight: 700;
   }
-  @include touch {
+  @include hover {
     opacity: 0.5;
     transition: .2s ease-in;
     &:hover {
