--- a/styles/global/_base.scss
+++ b/styles/global/_base.scss
@@ -60,3 +60,15 @@ section {
   border-top: 1px solid $light-grey;
   margin: 20px auto;
 }
+// a {
+//   text-decoration: underline;
+//   color: black;
+//   @include hover {
+//     text-decoration: none;
+//     opacity: 0.5;
+//     transition: opacity .25s;
+//     &:hover {
+//       opacity: 1;
+//     }
+//   };
+// }
