--- a/styles/components/_case-studies.scss
+++ b/styles/components/_case-studies.scss
@@ -103,7 +103,7 @@
       width: 100%;
       // height: 70vh;
       display: block;
-      margin: 0;
+      margin: 20px 0;
       // background-position: center center;
       // background-size: cover;
       // @include desktop {
