--- a/styles/components/_scroll-thingy.scss
+++ b/styles/components/_scroll-thingy.scss
@@ -10,6 +10,7 @@
     border: 3px solid white;
     border-radius: 25px;
     opacity: 0.6;
+    transition: all .5s ease-in;
     .scroller {
       position: absolute;
       top: 30%;
