hopefully fix formspree form

--- a/styles/components/_contact.scss
+++ b/styles/components/_contact.scss
@@ -3,12 +3,12 @@
     max-width: $tablet-width;
     margin: auto;
   }
-  .contact-text {
-    margin: 40px auto;
-    text-align: center;
-    // font-size: 1.2em;
-    font-weight: 400;
-  }
+  // .contact-text {
+  //   margin: 40px auto;
+  //   text-align: center;
+  //   // font-size: 1.2em;
+  //   font-weight: 400;
+  // }
   .button {
     display: block;
     margin: auto;
