add hero image, intro paragraph, and skill section.  update about me.

--- a/styles/components/_about.scss
+++ b/styles/components/_about.scss
@@ -3,12 +3,7 @@
     display: flex;
     justify-content: center;
     align-items: flex-start;
-    max-width: $tablet-width;
-    margin: auto;
-  };
-  @include desktop {
-    max-width: $desktop-width;
-  };
+  }
   img {
     display: block;
     margin: 30px auto;
