--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -5,13 +5,16 @@
   "global/mixins",
   "global/base",
   "global/helpers",
+  "global/typography",
   //components
-  "components/header",
-  "components/materialize-form-colors",
-  "components/navbar",
   "components/about",
   "components/carousel",
   "components/case-studies",
-  "components/scroll-thingy",
   "components/contact",
-  "components/footer";
+  "components/footer",
+  "components/header",
+  "components/intro",
+  "components/materialize-form-colors",
+  "components/navbar",
+  "components/scroll-thingy",
+  "components/skills";
