--- a/styles/components/_header.scss
+++ b/styles/components/_header.scss
@@ -1,15 +1,25 @@
 header {
   text-align: center;
+  background: url('../images/hero.jpg') center center no-repeat;
+  background-size: cover;
+  color: white;
+  padding: 100px;
+  width: 100vw;
+  min-width: 500px;
+  // opacity: .75;
+  @include desktop {
+    padding: 150px;
+  };
   h1 {
     font-weight: 700;
-    font-size: 40px;
     font-style: italic;
     text-transform: uppercase;
-
   }
   p {
     font-family: "Roboto Condensed", sans-serif;
     font-weight: 400;
     font-style: italic;
+    font-size: 1.5em;
+    margin-top: -20px;
   }
 }
