--- a/styles/global/_base.scss
+++ b/styles/global/_base.scss
@@ -33,17 +33,19 @@ body.fade-out {
 section {
   padding: 30px;
   min-width: 200px;
-  h3 {
-    text-transform: uppercase;
-    text-align: center;
-    font-family: "roboto condensed", sans-serif;
-    font-style: italic;
-    color: $grey;
-  }
-  p {
-    line-height: 1.5em;
-    font-weight: 700;
-  }
+  // h3 {
+  //   text-transform: uppercase;
+  //   text-align: center;
+  //   font-family: "roboto condensed", sans-serif;
+  //   font-style: italic;
+  //   color: $grey;
+  // }
+  // p, ul>li {
+  //   font-weight: 700;
+  // }
+  // p {
+  //   line-height: 1.5em;
+  // }
 }
 
 //some sections have light backgrounds
@@ -60,15 +62,3 @@ section {
   border-top: 1px solid $light-grey;
   margin: 20px auto;
 }
-// a {
-//   text-decoration: underline;
-//   color: black;
-//   @include hover {
-//     text-decoration: none;
-//     opacity: 0.5;
-//     transition: opacity .25s;
-//     &:hover {
-//       opacity: 1;
-//     }
-//   };
-// }
