--- a/styles/global/_mixins.scss
+++ b/styles/global/_mixins.scss
@@ -1,7 +1,7 @@
 $lg-phone-width: 600px;
 $tablet-width: 768px;
 $desktop-width: 1024px;
-
+$lg-desktop-width: 1440px;
 //if device screen is this big, do stuff
 @mixin lg-phone {
   @media (min-width: #{$lg-phone-width}) {
@@ -17,6 +17,12 @@ $desktop-width: 1024px;
 
 @mixin desktop {
   @media (min-width: #{$desktop-width}) {
+    @content;
+  }
+}
+
+@mixin lg-desktop {
+  @media (min-width: #{$lg-desktop-width}) {
     @content;
   }
 }
