--- a/styles/styles.css
+++ b/styles/styles.css
@@ -412,15 +412,6 @@ body.fade-out {
 section {
   padding: 30px;
   min-width: 200px; }
-  section h3 {
-    text-transform: uppercase;
-    text-align: center;
-    font-family: "roboto condensed", sans-serif;
-    font-style: italic;
-    color: #4D4D4D; }
-  section p {
-    line-height: 1.5em;
-    font-weight: 700; }
 
 .light-bg {
   background-color: #E1E1E1; }
@@ -449,108 +440,49 @@ section {
     .display-on-desktop {
       display: block; } }
 
-header {
-  text-align: center; }
-  header h1 {
-    font-weight: 700;
-    font-size: 40px;
-    font-style: italic;
-    text-transform: uppercase; }
-  header p {
-    font-family: "Roboto Condensed", sans-serif;
-    font-weight: 400;
-    font-style: italic; }
+@media (min-width: 600px) {
+  .restrain-width {
+    max-width: 768px;
+    margin: auto; } }
+@media (min-width: 1024px) {
+  .restrain-width {
+    max-width: 1024px; } }
 
-/* label color */
-.input-field label {
-  color: #000; }
+h1 {
+  font-weight: 700;
+  font-style: italic;
+  text-transform: uppercase; }
+  @media (min-width: 768px) {
+    h1 {
+      font-size: 3.25em; } }
+  @media (min-width: 1024px) {
+    h1 {
+      font-size: 3.5em; } }
+  @media (min-width: 1440px) {
+    h1 {
+      font-size: 4em; } }
 
-/* label focus color */
-.input-field input[type=text]:focus + label {
-  color: red; }
+h3 {
+  text-transform: uppercase;
+  text-align: center;
+  font-family: "roboto condensed", sans-serif;
+  font-style: italic;
+  color: #4D4D4D; }
 
-/* label underline focus color */
-.input-field input[type=text]:focus {
-  border-bottom: 1px solid #000;
-  box-shadow: 0 1px 0 0 #000; }
+p, ul > li {
+  font-weight: 700; }
+  @media (min-width: 1024px) {
+    p, ul > li {
+      font-size: 1.2em; } }
 
-/* valid color */
-.input-field input[type=text].valid {
-  border-bottom: 1px solid #000;
-  box-shadow: 0 1px 0 0 #000; }
-
-/* invalid color */
-.input-field input[type=text].invalid {
-  border-bottom: 1px solid #000;
-  box-shadow: 0 1px 0 0 #000; }
-
-/* icon prefix focus color */
-.input-field .prefix.active {
-  color: #000; }
-
-.my-nav {
-  display: flex;
-  flex-direction: column;
-  position: fixed;
-  z-index: 1000;
-  top: 0;
-  right: 0;
-  left: 0;
-  box-shadow: 5px 0px 2px grey;
-  z-index: 1; }
-  .my-nav ul {
-    margin: 0; }
-  .my-nav .nav-top-bar {
-    position: relative;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-right: 20px;
-    height: 60px;
-    background-color: white;
-    transition: .4s linear; }
-    .my-nav .nav-top-bar .hamburger {
-      cursor: pointer; }
-      @media (min-width: 768px) {
-        .my-nav .nav-top-bar .hamburger {
-          display: none; } }
-  .my-nav .dropdown-links {
-    display: none;
-    background-color: white;
-    padding: 20px;
-    padding-top: 25px;
-    text-align: center;
-    text-transform: uppercase;
-    box-shadow: 5px 0px 2px grey;
-    transition: 1s linear; }
-    .my-nav .dropdown-links li a {
-      color: black;
-      line-height: 2em;
-      font-size: 1.25em;
-      font-weight: 400;
-      font-style: italic;
-      border-bottom: 1px solid #C7C7C7; }
-  .my-nav .navbar-links {
-    display: none; }
-    @media (min-width: 768px) {
-      .my-nav .navbar-links {
-        display: flex; }
-        .my-nav .navbar-links li a {
-          color: black;
-          font-weight: 700;
-          margin-left: 15px;
-          text-transform: uppercase; } }
+p {
+  line-height: 1.5em; }
 
 @media (min-width: 600px) {
   .about-content {
     display: flex;
     justify-content: center;
-    align-items: flex-start;
-    max-width: 768px;
-    margin: auto; } }
-@media (min-width: 1024px) {
-  .about-content {
-    max-width: 1024px; } }
+    align-items: flex-start; } }
 .about-content img {
   display: block;
   margin: 30px auto; }
@@ -753,6 +685,148 @@ header {
   .to-top-tablet-and-down {
     display: none; } }
 
+#contact form, #contact .contact-text {
+  max-width: 768px;
+  margin: auto; }
+#contact .button {
+  display: block;
+  margin: auto;
+  background-color: black;
+  color: white;
+  font-family: "roboto condensed", sans-serif;
+  font-style: italic;
+  font-weight: 700;
+  font-size: 1.5em; }
+
+footer {
+  padding: 20px;
+  display: flex;
+  justify-content: space-around; }
+  footer a {
+    text-transform: uppercase;
+    font-family: "roboto condensed", sans-serif;
+    font-weight: 400;
+    font-style: italic;
+    color: black;
+    opacity: .5;
+    transition: all .1s ease-in; }
+    @media (hover: hover) {
+      footer a:hover {
+        opacity: 1; } }
+
+header {
+  text-align: center;
+  background: url("../images/hero.jpg") center center no-repeat;
+  background-size: cover;
+  color: white;
+  padding: 100px;
+  width: 100vw;
+  min-width: 500px; }
+  @media (min-width: 1024px) {
+    header {
+      padding: 150px; } }
+  header h1 {
+    font-weight: 700;
+    font-style: italic;
+    text-transform: uppercase; }
+  header p {
+    font-family: "Roboto Condensed", sans-serif;
+    font-weight: 400;
+    font-style: italic;
+    font-size: 1.5em;
+    margin-top: -20px; }
+
+.lead {
+  text-align: center;
+  margin: auto; }
+  @media (min-width: 600px) {
+    .lead {
+      text-align: left;
+      max-width: 77%; } }
+  @media (min-width: 1024px) {
+    .lead {
+      font-size: 1.4em; } }
+
+/* label color */
+.input-field label {
+  color: #000; }
+
+/* label focus color */
+.input-field input[type=text]:focus + label {
+  color: red; }
+
+/* label underline focus color */
+.input-field input[type=text]:focus {
+  border-bottom: 1px solid #000;
+  box-shadow: 0 1px 0 0 #000; }
+
+/* valid color */
+.input-field input[type=text].valid {
+  border-bottom: 1px solid #000;
+  box-shadow: 0 1px 0 0 #000; }
+
+/* invalid color */
+.input-field input[type=text].invalid {
+  border-bottom: 1px solid #000;
+  box-shadow: 0 1px 0 0 #000; }
+
+/* icon prefix focus color */
+.input-field .prefix.active {
+  color: #000; }
+
+.my-nav {
+  display: flex;
+  flex-direction: column;
+  position: fixed;
+  z-index: 1000;
+  top: 0;
+  right: 0;
+  left: 0;
+  box-shadow: 5px 0px 2px grey;
+  z-index: 1; }
+  .my-nav ul {
+    margin: 0; }
+  .my-nav .nav-top-bar {
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-right: 20px;
+    height: 60px;
+    background-color: white;
+    transition: .4s linear; }
+    .my-nav .nav-top-bar .hamburger {
+      cursor: pointer; }
+      @media (min-width: 768px) {
+        .my-nav .nav-top-bar .hamburger {
+          display: none; } }
+  .my-nav .dropdown-links {
+    display: none;
+    background-color: white;
+    padding: 20px;
+    padding-top: 25px;
+    text-align: center;
+    text-transform: uppercase;
+    box-shadow: 5px 0px 2px grey;
+    transition: 1s linear; }
+    .my-nav .dropdown-links li a {
+      color: black;
+      line-height: 2em;
+      font-size: 1.25em;
+      font-weight: 400;
+      font-style: italic;
+      border-bottom: 1px solid #C7C7C7; }
+  .my-nav .navbar-links {
+    display: none; }
+    @media (min-width: 768px) {
+      .my-nav .navbar-links {
+        display: flex; }
+        .my-nav .navbar-links li a {
+          color: black;
+          font-weight: 700;
+          margin-left: 15px;
+          text-transform: uppercase; } }
+
 @media (min-width: 1024px) {
   .mousey {
     position: absolute;
@@ -786,33 +860,24 @@ header {
   100% {
     transform: translateY(15px);
     opacity: 0; } }
-#contact form, #contact .contact-text {
-  max-width: 768px;
-  margin: auto; }
-#contact .button {
-  display: block;
-  margin: auto;
-  background-color: black;
-  color: white;
-  font-family: "roboto condensed", sans-serif;
-  font-style: italic;
-  font-weight: 700;
-  font-size: 1.5em; }
-
-footer {
-  padding: 20px;
+.skills-wrapper {
   display: flex;
-  justify-content: space-around; }
-  footer a {
-    text-transform: uppercase;
-    font-family: "roboto condensed", sans-serif;
-    font-weight: 400;
-    font-style: italic;
-    color: black;
-    opacity: .5;
-    transition: all .1s ease-in; }
-    @media (hover: hover) {
-      footer a:hover {
-        opacity: 1; } }
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: stretch; }
+  .skills-wrapper .skill-wrapper {
+    flex-basis: 100%;
+    text-align: center;
+    font-weight: 700; }
+    @media (min-width: 768px) {
+      .skills-wrapper .skill-wrapper {
+        flex-basis: 200px;
+        text-align: left; } }
+    .skills-wrapper .skill-wrapper h4 {
+      font-family: "roboto condensed", sans-serif;
+      text-transform: uppercase;
+      font-size: 1.4em;
+      font-weight: 700;
+      font-style: italic; }
 
 /*# sourceMappingURL=styles.css.map */
