--- a/styles/components/_header.scss
+++ b/styles/components/_header.scss
@@ -1,7 +1,10 @@
 header {
-  text-align: center;
   background: url('../images/hero.jpg') center center no-repeat;
   background-size: cover;
+
+  position: relative;
+
+  text-align: center;
   color: white;
   padding: 100px;
   width: 100vw;
@@ -22,4 +25,14 @@ header {
     font-size: 1.5em;
     margin-top: -20px;
   }
+}
+
+.header-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background: rgba(0,0,0,0.4);
+  // z-index: -1;
 }
