--- a/styles/components/_intro.scss
+++ b/styles/components/_intro.scss
@@ -1,15 +1,11 @@
 .lead {
-  text-align: center;
+  text-align: left;
   margin: auto;
   @include lg-phone {
     text-align: left;
     max-width: 77%;
   };
-  // @include tablet {
-  //   max-width: 66%;
-  // }
   @include desktop {
-    // max-width: 50%;
     font-size: 1.4em;
   };
 }
