--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -8,7 +8,6 @@
   "global/typography",
   //components
   "components/about",
-  "components/carousel",
   "components/case-studies",
   "components/contact",
   "components/footer",
@@ -17,4 +16,5 @@
   "components/materialize-form-colors",
   "components/navbar",
   "components/scroll-thingy",
-  "components/skills";
+  "components/skills",
+  "components/work";
