--- a/styles/components/_header.scss
+++ b/styles/components/_header.scss
@@ -13,18 +13,6 @@ header {
   @include desktop {
     padding: 150px;
   };
-  h1 {
-    font-weight: 700;
-    font-style: italic;
-    text-transform: uppercase;
-  }
-  p {
-    font-family: "Roboto Condensed", sans-serif;
-    font-weight: 400;
-    font-style: italic;
-    font-size: 1.5em;
-    margin-top: -20px;
-  }
 }
 
 .header-overlay {
@@ -34,5 +22,21 @@ header {
   height: 100%;
   width: 100%;
   background: rgba(0,0,0,0.4);
-  // z-index: -1;
+}
+
+.header-text {
+  position: relative;
+  h1 {
+    font-weight: 700;
+    font-style: italic;
+    text-transform: uppercase;
+    opacity: 1;
+  }
+  p {
+    font-family: "Roboto Condensed", sans-serif;
+    font-weight: 400;
+    font-style: italic;
+    font-size: 1.5em;
+    margin-top: -20px;
+  }
 }
