--- a/styles/styles.css
+++ b/styles/styles.css
@@ -473,13 +473,12 @@ h3 {
   color: #4D4D4D; }
 
 p, ul > li {
-  font-weight: 700; }
+  font-weight: 300;
+  font-size: 1.2em;
+  line-height: 1.5em; }
   @media (min-width: 1024px) {
     p, ul > li {
       font-size: 1.2em; } }
-
-p {
-  line-height: 1.5em; }
 
 @media (min-width: 600px) {
   .about-content {
@@ -641,16 +640,6 @@ header {
   @media (min-width: 1024px) {
     header {
       padding: 150px; } }
-  header h1 {
-    font-weight: 700;
-    font-style: italic;
-    text-transform: uppercase; }
-  header p {
-    font-family: "Roboto Condensed", sans-serif;
-    font-weight: 400;
-    font-style: italic;
-    font-size: 1.5em;
-    margin-top: -20px; }
 
 .header-overlay {
   position: absolute;
@@ -659,6 +648,20 @@ header {
   height: 100%;
   width: 100%;
   background: rgba(0, 0, 0, 0.4); }
+
+.header-text {
+  position: relative; }
+  .header-text h1 {
+    font-weight: 700;
+    font-style: italic;
+    text-transform: uppercase;
+    opacity: 1; }
+  .header-text p {
+    font-family: "Roboto Condensed", sans-serif;
+    font-weight: 400;
+    font-style: italic;
+    font-size: 1.5em;
+    margin-top: -20px; }
 
 .lead {
   text-align: left;
@@ -737,7 +740,7 @@ header {
       color: black;
       line-height: 2em;
       font-size: 1.25em;
-      font-weight: 400;
+      font-weight: 300;
       font-style: italic;
       border-bottom: 1px solid #C7C7C7; }
   .my-nav .navbar-links {
