--- a/styles/components/_header.scss
+++ b/styles/components/_header.scss
@@ -1,15 +1,12 @@
 header {
   background: url('../images/hero.jpg') center center no-repeat;
   background-size: cover;
-
   position: relative;
-
   text-align: center;
   color: white;
-  padding: 100px;
+  padding-top: 100px;
+  padding-bottom: 100px;
   width: 100vw;
-  min-width: 500px;
-  // opacity: .75;
   @include desktop {
     padding: 150px;
   };
@@ -36,7 +33,15 @@ header {
     font-family: "Roboto Condensed", sans-serif;
     font-weight: 400;
     font-style: italic;
-    font-size: 1.5em;
     margin-top: -20px;
+    font-size: 1.5em;
+    @include tablet {
+      font-size: 2em;
+      margin-top: -20px;
+    };
+    @include desktop {
+      font-size: 2.5em;
+      margin-top: -30px;
+    };
   }
 }
