--- a/styles/styles.css
+++ b/styles/styles.css
@@ -634,9 +634,9 @@ header {
   position: relative;
   text-align: center;
   color: white;
-  padding: 100px;
-  width: 100vw;
-  min-width: 500px; }
+  padding-top: 100px;
+  padding-bottom: 100px;
+  width: 100vw; }
   @media (min-width: 1024px) {
     header {
       padding: 150px; } }
@@ -660,8 +660,16 @@ header {
     font-family: "Roboto Condensed", sans-serif;
     font-weight: 400;
     font-style: italic;
-    font-size: 1.5em;
-    margin-top: -20px; }
+    margin-top: -20px;
+    font-size: 1.5em; }
+    @media (min-width: 768px) {
+      .header-text p {
+        font-size: 2em;
+        margin-top: -20px; } }
+    @media (min-width: 1024px) {
+      .header-text p {
+        font-size: 2.5em;
+        margin-top: -30px; } }
 
 .lead {
   text-align: left;
