--- a/styles/styles.css
+++ b/styles/styles.css
@@ -615,7 +615,7 @@ p, ul > li {
 footer {
   padding: 20px;
   display: flex;
-  justify-content: space-around; }
+  justify-content: center; }
   footer a {
     text-transform: uppercase;
     font-family: "roboto condensed", sans-serif;
@@ -623,7 +623,8 @@ footer {
     font-style: italic;
     color: black;
     opacity: .5;
-    transition: all .1s ease-in; }
+    transition: all .1s ease-in;
+    margin: auto 8px; }
     @media (hover: hover) {
       footer a:hover {
         opacity: 1; } }
