--- a/styles/components/_work.scss
+++ b/styles/components/_work.scss
@@ -21,16 +21,6 @@
   width: 300px;
   height: 300px;
   margin: 10px;
-  @include lg-phone {
-    // margin: 0;
-    // width: 48vw;
-    // height: 48vw;
-  }
-  @include desktop {
-    // margin: 0;
-    // height: 25vw;
-    // width: 24.5vw;
-  }
   .work-thumb-overlay {
     transition: linear .25s;
     position: absolute;
@@ -43,9 +33,11 @@
     z-index: 100;
   }
   &:hover > .work-thumb-overlay {
-    opacity: 0.8;
-    display: block;
-    cursor: pointer;
+    @include hover {
+      opacity: 0.8;
+      display: block;
+      cursor: pointer;
+    }
   }
 }
 
@@ -53,22 +45,24 @@
   display: none;
 }
 .work-thumbnail:hover > .work-thumb-info {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  color: white;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  z-index: 200;
-  padding: 10px;
-  & h5, p {
-    margin: .2em;
-  }
+  @include hover {    
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    z-index: 200;
+    padding: 10px;
+    & h5, p {
+      margin: .2em;
+    }
+  };
 }
 
 
